--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "googleapis": "^140.0.1"
+    "dotenv": "^16.4.5",
+    "googleapis": "^140.0.1",
+    "qrcode-terminal": "^0.12.0",
+    "whatsapp-web.js": "^1.25.0"
   }
 }
